MVP header + pizzas

--- a/index.html
+++ b/index.html
@@ -95,6 +95,81 @@
 
                     <!-- ещё чипы -->
                 </div>
+                <section class="pizzas" aria-labelledby="pizzas-title">
+
+
+                    <!-- Сетка карточек -->
+                    <div class="pizzas__grid">
+                        <!-- Карточка товара -->
+                        <article class="card">
+                            <div class="card__media">
+                                <img class="card__img" src="img/menu-pizza1.jpg" width="420" height="420" loading="lazy"
+                                    decoding="async" alt="Pizza Pepperoni" />
+                            </div>
+
+                            <div class="card__body">
+                                <h3 class="card__title">Pizza Pepperoni</h3>
+                                <p class="card__meta">16–25 minutes</p>
+
+                                <div class="card__footer">
+                                    <div class="card__price">$14</div>
+                                    <button class="card__cta" aria-label="Add pizza to cart"></button>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="card">
+                            <div class="card__media">
+                                <img class="card__img" src="img/menu-pizza1.jpg" width="420" height="420" loading="lazy"
+                                    decoding="async" alt="Pizza Pepperoni" />
+                            </div>
+
+                            <div class="card__body">
+                                <h3 class="card__title">Pizza Pepperoni</h3>
+                                <p class="card__meta">16–25 minutes</p>
+
+                                <div class="card__footer">
+                                    <div class="card__price">$14</div>
+                                    <button class="card__cta" aria-label="Add pizza to cart"></button>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="card">
+                            <div class="card__media">
+                                <img class="card__img" src="img/menu-pizza1.jpg" width="420" height="420" loading="lazy"
+                                    decoding="async" alt="Pizza Pepperoni" />
+                            </div>
+
+                            <div class="card__body">
+                                <h3 class="card__title">Pizza Pepperoni</h3>
+                                <p class="card__meta">16–25 minutes</p>
+
+                                <div class="card__footer">
+                                    <div class="card__price">$14</div>
+                                    <button class="card__cta" aria-label="Add pizza to cart"></button>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="card">
+                            <div class="card__media">
+                                <img class="card__img" src="img/menu-pizza1.jpg" width="420" height="420" loading="lazy"
+                                    decoding="async" alt="Pizza Pepperoni" />
+                            </div>
+
+                            <div class="card__body">
+                                <h3 class="card__title">Pizza Pepperoni</h3>
+                                <p class="card__meta">16–25 minutes</p>
+
+                                <div class="card__footer">
+                                    <div class="card__price">$14</div>
+                                    <button class="card__cta" aria-label="Add pizza to cart"></button>
+                                </div>
+                            </div>
+                        </article>
+
+
+                        <!-- ещё карточки по тому же шаблону -->
+                    </div>
+                </section>
 
             </div>
             <!-- ниже будет промо и грид -->
