--- a/index.html
+++ b/index.html
@@ -75,23 +75,23 @@
                 <h2 class="menu__title">Our Menu</h2>
 
                 <div class="menu__chips">
-                    <button class="menu-chip" type="button" aria-pressed="true">
+                    <button class="menu-chip" type="button" aria-pressed="true" data-cat="pizza">
                         <img class="menu-chip__icon" src="icons/pizza.jpg" alt="">
                         <span class="menu-chip__label">Pizza</span>
                     </button>
-                    <button class="menu-chip" type="button" aria-pressed="true">
+                    <button class="menu-chip" type="button" data-cat="burger">
                         <img class="menu-chip__icon" src="icons/burger.jpg" alt="">
                         <span class="menu-chip__label">Burger</span>
                     </button>
-                    <button class="menu-chip" type="button" aria-pressed="true">
+                    <button class="menu-chip" type="button" data-cat="fries">
                         <img class="menu-chip__icon" src="icons/fries.jpg" alt="">
                         <span class="menu-chip__label">Fries</span>
                     </button>
-                    <button class="menu-chip" type="button" aria-pressed="true">
+                    <button class="menu-chip" type="button" data-cat="pack">
                         <img class="menu-chip__icon" src="icons/pack.jpg" alt="">
                         <span class="menu-chip__label">Pack</span>
                     </button>
-                    <a class="menu__actions" href="#all">See All</a>
+                    <a class="menu__actions" data-cat="all" href="#all">See All</a>
 
                     <!-- ещё чипы -->
                 </div>
